k8s/current.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    argocd.argoproj.io/tracking-id: ecommerce-app:apps/StatefulSet:ecommerce/mysql
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"annotations":{"argocd.argoproj.io/tracking-id":"ecommerce-app:apps/StatefulSet:ecommerce/mysql"},"name":"mysql","namespace":"ecommerce"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"mysql"}},"serviceName":"mysql-service","template":{"metadata":{"labels":{"app":"mysql"}},"spec":{"containers":[{"env":[{"name":"MYSQL_ALLOW_EMPTY_PASSWORD","value":"true"},{"name":"MYSQL_USER","valueFrom":{"secretKeyRef":{"key":"DB_USER","name" [...]
  creationTimestamp: "2025-09-24T14:07:23Z"
  generation: 5
  name: mysql
  namespace: ecommerce
  resourceVersion: "21444"
  uid: 9b910247-1d2f-442d-a72c-323bc1e9ed4c
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql-service
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_ALLOW_EMPTY_PASSWORD
          value: "true"
        - name: MYSQL_USER
          valueFrom:
            secretKeyRef:
              key: DB_USER
              name: app-secrets
        - name: MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: DB_PASSWORD
              name: app-secrets
        - name: MYSQL_DATABASE
          valueFrom:
            configMapKeyRef:
              key: DB_NAME
              name: app-config
        image: mysql:8
        imagePullPolicy: IfNotPresent
        name: mysql
        ports:
        - containerPort: 3306
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
  volumeClaimTemplates:
  - apiVersion: v1
    kind: PersistentVolumeClaim
    metadata:
      creationTimestamp: null
      name: mysql-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      volumeMode: Filesystem
    status:
      phase: Pending
status:
  availableReplicas: 1
  collisionCount: 0
  currentReplicas: 1
  currentRevision: mysql-85b4d69546
  observedGeneration: 5
  readyReplicas: 1
  replicas: 1
  updateRevision: mysql-85b4d69546
  updatedReplicas: 1
