k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  namespace: ecommerce  # Specify the namespace here
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: yazilansari/payment-service:1b281281222a8d2cffd1c003291dd8ee60b3c184
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
