k8s/products-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-deployment
  namespace: ecommerce  # Specify the namespace here
spec:
  replicas: 2
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
      - name: products
        image: yazilansari/products-service:b67fdd67586df210de7b7565213a79a6520ead0f
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
