k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: ecommerce  # Specify the namespace here
spec:
  selector:
    app: auth
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
