k8s/nextjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: ecommerce  # Specify the namespace here
spec:
  selector:
    app: nextjs
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: LoadBalancer
