k8s/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: ecommerce  # Specify the namespace here
spec:
  selector:
    app: orders
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
