k8s/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: ecommerce  # Specify the namespace here
spec:
  selector:
    app: payment
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
