k8s/products-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-service
  namespace: ecommerce  # Specify the namespace here
spec:
  selector:
    app: products
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
