k8s/ecommerce-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: ecommerce  # Specify the namespace here
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://192-168-28-130.nip.io"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/use-regex: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Disable SSL redirect (force HTTP)
spec:
  ingressClassName: nginx
  rules:
  - host: 192-168-28-130.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextjs-service
            port:
              number: 3000
  - host: api.192-168-28-130.nip.io
    http:
      paths:
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: products-service
            port:
              number: 80
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: orders-service
            port:
              number: 3000
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 3000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 3000
